--- a/CS321_W5D1_ExerciseLogAPI/Properties/launchSettings.json
+++ b/CS321_W5D1_ExerciseLogAPI/Properties/launchSettings.json
@@ -17,14 +17,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "CS321_W4D2_ExerciseLogAPI": {
+    "CS321_W5D1_ExerciseLogAPI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
